--- a/trunk/simulations-java/simulations/the-ramp/data/the-ramp/localization/the-ramp-strings_sk.properties
+++ b/trunk/simulations-java/simulations/the-ramp/data/the-ramp/localization/the-ramp-strings_sk.properties
@@ -1,5 +1,5 @@
-#C:\Program Files\PhET-1.0\sims\the-ramp\the-ramp-strings_sk.properties
-#Sun Mar 16 04:54:05 CET 2008
+#the-ramp-strings_sk.properties created Wed Dec 01 19:12:58 CET 2010 using: the-ramp 1.03.00 (30671), translation-utility 2.09.00 (44031) sep 14, 2010
+#Wed Dec 01 19:12:58 CET 2010
 property.ramp-angle=Uhol sklonu
 module.introduction=\u00DAvod
 controls.sound=Zvuk
@@ -7,7 +7,7 @@ time.go=\u0160tart\!
 forces.parallel-friction=Trecia sila
 readout.seconds={0} sekundy
 force.subscript.wall=<html>F<sub>steny</html>
-coordinates.entire-vectors=Cel\u00E9 vektory
+coordinates.entire-vectors=Vektory
 units.joules=Joule
 force.subscript.net=<html>F<sub>v</html>
 coordinates.y=y
@@ -19,7 +19,7 @@ the-ramp.description=Sily na naklonenej rovine
 the-ramp.name=Rampa
 energy.thermal=Tepeln\u00E1
 message.overheated=Prehratie
-object.dog=Spiaci pes
+object.dog=Le\u017Eiaci pes
 units.degrees=stupe\u0148
 coordinates.y-components=Y-ov\u00E9 zlo\u017Eky
 time.pause=Pauza
@@ -34,9 +34,7 @@ time.playback=Z\u00E1znam
 readout.velocity={0} m/s
 forces.Net=V\u00FDsledn\u00E1
 coordinates.perpendicular-components=Kolm\u00E9 zlo\u017Eky
-object.crate=Debna
-the.ramp=Rampa
-the.ramp.simulation=Simul\u00E1cia na rampe
+object.crate=Kontajner
 forces.normal=Norm\u00E1lov\u00E1
 controls.frictionless=Bez trenia
 invitation=<html>P\u00F4sobte silou<br>na kartot\u00E9ku</html>
@@ -67,18 +65,20 @@ energy.energy=Energia
 controls.show-free-body-diagram=Diagram s\u00EDl >>
 controls.friction=Trecia
 object.file-cabinet=Kartot\u00E9ka
+forces.kinetic-friction=Dynamick\u00E9 trenie
 forces.friction=trecia
 units.newtons=Newton
 forces.applied=P\u00F4sobiaca
 forces.applied.n=P\u00F4sobiaca sila (N)
 confirm.clear=Potvrdenie zmazania
 object.refrigerator=Chladni\u010Dka
-controls.choose-object=Objekt na rampe
+controls.choose-object=V\u00FDber telesa
 readout.graph-name=Graf - {0} 
 display.free-body-diagram=Diagram s\u00EDl
 confirm-clear-graphs=Skuto\u010Dne chcete zmaza\u0165 grafy?
 forces.parallel-applied=P\u00F4sobiaca sila
 forces.total=Celkov\u00E1
+forces.static-friction=Statick\u00E9 trenie
 units.meters-per-second=meter/sekunda
 confirm.reset.title=Potvrdenie znovu nastavenia
 0.energy={0} Energia
@@ -88,4 +88,3 @@ forces.Wall=Steny
 coordinates.x-components=X-ov\u00E9 zlo\u017Eky
 controls.forces-to-show=Zobrazi\u0165 sily
 force.subscript.applied=<html>F<sub>p</html>
-
