--- a/simulations-flash/common/data/localization/common-strings_sk.xml
+++ b/simulations-flash/common/data/localization/common-strings_sk.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<!--common-strings_sk.xml created Sat Mar 21 21:39:58 CET 2009 using: flash-common-strings 1.04.00 (29429), translation-utility 1.12.00 (29256)-->
+<!--common-strings_sk.xml created Fri Dec 03 17:39:31 CET 2010 using: flash-common-strings 2.02.00 (38663), translation-utility 2.09.00 (44031) sep 14, 2010-->
 <SimStrings>
 <string key="About..." value="O programe..."/>
 <string key="SoftwareDevelopment" value="Vývoj softvéru"/>
@@ -22,6 +22,7 @@
 <string key="StatisticsField-message_type" value="Typ správy"/>
 <string key="InstallationDated" value="Vaša PhET offline inštalácia web stránky je z dňa {0}."/>
 <string key="CheckUpdates" value="Automaticky skontrolovať aktualizáciu"/>
+<string key="UpToDate" value="Aktualizácia"/>
 <string key="StatisticsField-sim_major_version" value="Verzia simulácie (major)"/>
 <string key="StatisticsField-user_total_sessions" value="Celkový počet spustení všetkých simulácii."/>
 <string key="InstallationNewer" value="Je  prístupná novšia verzia, z dňa {0}."/>
@@ -34,9 +35,11 @@
 <string key="Preferences" value="Predvoľby"/>
 <string key="AllowMessages" value="Povoliť odoslanie informácii pre PhET"/>
 <string key="Updates" value="Aktualizácia"/>
+<string key="StatisticsField-sim_revision" value="Verzia simulácie:"/>
 <string key="StatisticsField-user_preference_file_creation_time" value="Čas vytvorenia súboru Predvoľby"/>
 <string key="Interviews" value="Poradcovia"/>
 <string key="StatisticsField-host_flash_time_offset" value="Časové pásmo"/>
+<string key="MostCurrentVersion" value="Máte najaktuálnejšiu verziu ({0}) simulácie {1}."/>
 <string key="StatisticsField-sim_deployment" value="Typ rozmiestnenia"/>
 <string key="PrivacyRequirement" value="&lt;a href='{0}'&gt;PhET&lt;/a&gt;  je sprístupnené zadarmo vďaka grantom, ktoré požadujú od nás zbierať minimálne množstvo neosobných informácii slúžiacich k preukázaniu využívania PhET simulácii a tiež sú potrebné k zlepšeniu podpory našich užívateľov.   "/>
 <string key="StatisticsField-sim_type" value="Typ simulácie"/>
@@ -62,14 +65,14 @@
 <string key="Distribution" value="Distribúcia"/>
 <string key="LicenseLibraries" value="Licenčné podmienky:"/>
 <string key="PrivacyDetails" value="Podrobnosti zabezpečenia"/>
-<string key="StatisticsField-sim_svn_revision" value="Verzia simulácie (skúšobná)"/>
 <string key="NotUpdateSim" value="Táto simulácia nemôže byť aktualizovaná automaticky."/>
 <string key="CurrentVersionIs" value="Vaša súčasná verzia {0} je {1}."/>
 <string key="StatisticsField-host_flash_os" value="Operačný systém a názov"/>
 <string key="OK" value="OK"/>
+<string key="Error" value="Chyba"/>
+<string key="CheckSimUpdates" value="Skontrolovať aktualizáciu simulácie..."/>
 <string key="StatisticsField-sim_project" value="Názov projektu"/>
 <string key="NewerVersionIs" value="K dispozícii je novšia verzia {0}."/>
-<string key="CheckSimUpdates" value="Skontrolovať aktualizáciu simulácie..."/>
 <string key="SentInformation" value="Informácia zobrazená nižšie bude poslaná PhET po spustení simulácie."/>
 <string key="OSVersion" value="OS"/>
 <string key="Details" value="Podrobnosti"/>
@@ -77,5 +80,7 @@
 <string key="LeadDesign" value="Vedúci dizajnu"/>
 <string key="StatisticsField-host_locale_language" value="Hlavný jazyk"/>
 <string key="AboutSim" value="O programe {0} "/>
+<string key="VersionError2" value="Prosím skúste to znova neskôr, alebo navštívte &lt;a href='{0}'&gt;http://phet.colorado.edu&lt;/a&gt;"/>
+<string key="VersionError1" value="Vyskytla sa chyba pri získavaní informácie o verzii."/>
 <string key="StatisticsField-sim_locale_country" value="Krajina"/>
 </SimStrings>
