--- a/simulations-java/simulations/fluid-pressure-and-flow/changes.txt
+++ b/simulations-java/simulations/fluid-pressure-and-flow/changes.txt
@@ -1,3 +1,4 @@
+Move value property into Sensor base class
 Added units to velocity sensor, cleaned up VelocitySensorNode and PressureSensorNode
 Added a "close" button to the ruler
 Removed dropper "drop" button
