--- a/trunk/simulations-java/simulations/fluid-pressure-and-flow/changes.txt
+++ b/trunk/simulations-java/simulations/fluid-pressure-and-flow/changes.txt
@@ -1,3 +1,4 @@
+Created class hierarchy for sensor nodes
 Move value property into Sensor base class
 Added units to velocity sensor, cleaned up VelocitySensorNode and PressureSensorNode
 Added a "close" button to the ruler
