--- a/simulations-java/simulations/fluid-pressure-and-flow/changes.txt
+++ b/simulations-java/simulations/fluid-pressure-and-flow/changes.txt
@@ -1,3 +1,5 @@
+Improved sensor nodes so they have an attached triangle tip pointing to the sensor hot spot
+Moved velocity vector arrow behind the sensor triangle hot spot
 Add a background to sensor nodes to make them look more sensory
 Created class hierarchy for sensor nodes
 Move value property into Sensor base class
