--- a/trunk/simulations-java/simulations/fluid-pressure-and-flow/changes.txt
+++ b/trunk/simulations-java/simulations/fluid-pressure-and-flow/changes.txt
@@ -1,3 +1,4 @@
+Added balloons
 Simplified context interface for PressureSensor model
 # 0.00.06 (46993) Dec 8, 2010
 Fixed: Possible to deselect units radio buttons
