--- a/trunk/simulations-java/common/phetcommon/changes.txt
+++ b/trunk/simulations-java/common/phetcommon/changes.txt
@@ -1,3 +1,4 @@
+Moved spline computations from energy-skate-park to phetcommon for reuse in fluid-pressure-and-flow
 11-29-2010: made ModelViewTransform and ImmutableVector2D use Point2D and Point2D.Double more appropriately
 11-29-2010: added ImmutableVector2D.getDistance
 11-19-2010: made Property<T>.getDefaultValue() protected so it doesn't appear in code completion
