--- a/trunk/simulations-java/common/phetcommon/changes.txt
+++ b/trunk/simulations-java/common/phetcommon/changes.txt
@@ -1,3 +1,4 @@
+Moved spline computations from phetcommon to common/spline since it depends on Jama
 Moved spline computations from energy-skate-park to phetcommon for reuse in fluid-pressure-and-flow
 11-29-2010: made ModelViewTransform and ImmutableVector2D use Point2D and Point2D.Double more appropriately
 11-29-2010: added ImmutableVector2D.getDistance
