--- a/trunk/simulations-java/simulations/fluid-pressure-and-flow/changes.txt
+++ b/trunk/simulations-java/simulations/fluid-pressure-and-flow/changes.txt
@@ -1,3 +1,4 @@
+Fixed: make sure pipe top doesn't go below pipe bottom
 Separated dots flow control from dropper
 Fluid Flow: improved initial sensor locations
 Made pipe curve continuously instead of linear
