--- a/simulations-java/simulations/fluid-pressure-and-flow/changes.txt
+++ b/simulations-java/simulations/fluid-pressure-and-flow/changes.txt
@@ -1,3 +1,4 @@
+Improved location for dot flow control
 Fixed: make sure pipe top doesn't go below pipe bottom
 Separated dots flow control from dropper
 Fluid Flow: improved initial sensor locations
