--- a/simulations-java/simulations/gravity-and-orbits/changes.txt
+++ b/simulations-java/simulations/gravity-and-orbits/changes.txt
@@ -1,3 +1,4 @@
+Switched to 4 modes: SP, SPM, PM, Ps
 Fixed: Location of "x planet mass" seems inconsistent, sometimes above and sometimes below.
 Fixed: Hard to see where "20 planet masses" text overlaps sun body.
 # 0.0.05 (46883) Dec 6, 2010
