--- a/simulations-java/simulations/gravity-and-orbits/changes.txt
+++ b/simulations-java/simulations/gravity-and-orbits/changes.txt
@@ -1,3 +1,4 @@
+Removed animation and zooming
 Added UI for Earth System button
 Switched to 4 modes: SP, SPM, PM, Ps
 Fixed: Location of "x planet mass" seems inconsistent, sometimes above and sometimes below.
