--- a/trunk/simulations-java/common/piccolo-phet/changes.txt
+++ b/trunk/simulations-java/common/piccolo-phet/changes.txt
@@ -1,3 +1,4 @@
+12-10-2010: For rulers with no insets (i.e. where the first tick appears at the edge of the ruler), don't show the first and last major tick labels, and only show the units label after the first visible major tick label, resolves #2604
 12-8-2010: Made it possible to set the first tick mark of the ruler to appear at its edge, see #2604
 11-2-2010: Added support for showing a disabled AbstractMediaButton on a black background
 5-21-2010: Fixed constructor arg name in ShadowHTMLNode, resolves #2368
