--- a/simulations-java/simulations/capacitor-lab/changes.txt
+++ b/simulations-java/simulations/capacitor-lab/changes.txt
@@ -1,3 +1,4 @@
+12/10/10 use PropertyRadioButton for selection of dielectric charge view
 12/10/10 migrate PropertyCheckBox to phetcommon
 # 1.00.00 (46915) Dec 7, 2010
 12/7/10 added screenshot for 1.00 deployment
