--- a/simulations-java/simulations/acid-base-solutions/changes.txt
+++ b/simulations-java/simulations/acid-base-solutions/changes.txt
@@ -1,3 +1,4 @@
+12/10/10 #2577, add ability to substitute single-color circles for molecules images, for testing alternative colors
 12/8/10 move molecules.svg into assets, remove bite out of A- in the SVG file
 11/30/10 add colorblindness test app, ABSTestColorblindness, see #2577
 # 1.00.00 (43926) Sep 10, 2010
