--- a/simulations-java/simulations/acid-base-solutions/changes.txt
+++ b/simulations-java/simulations/acid-base-solutions/changes.txt
@@ -1,3 +1,5 @@
+# 1.00.01 (47052) Dec 10, 2010
+12/10/10 demonstrate proposed color changes to address colorblind issues
 12/10/19 #2577, try Kelly's new colors, use colored circles instead of molecule images throughout
 12/10/10 #2577, add ability to substitute single-color circles for molecules images, for testing alternative colors
 12/8/10 move molecules.svg into assets, remove bite out of A- in the SVG file
