--- a/trunk/simulations-java/simulations/gravity-and-orbits/changes.txt
+++ b/trunk/simulations-java/simulations/gravity-and-orbits/changes.txt
@@ -1,3 +1,4 @@
+Fixed: Path node is incorrect in cartoon scale
 Improved cartoon mode
 Fixed: initial zoom is incorrect
 Removed animation and zooming
